<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. rogergcc
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCourse"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/bottomNavigationBackground"
        app:cardCornerRadius="15dp"

        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        android:scaleType="fitCenter"-->


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"

            android:background="@color/nav_bar_color"
            android:src="@drawable/education_1"
            android:contentDescription="@string/app_name"

             />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calibri"
        android:text="@string/title_topic_course"
        android:textColor="@color/contentTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardViewCourse"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="94dp" />

    <TextView
        android:id="@+id/tv_cantidad_cursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calibri"
        android:text="@string/number_courses"
        android:textColor="@color/contentTextColor"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        tools:layout_conversion_absoluteHeight="15dp"
        tools:layout_conversion_absoluteWidth="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>