<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. rogergcc
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.menucourses.CoursesStaggedFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffba60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffba60"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingLeft="@dimen/horizontal_dashboard"
                android:paddingTop="@dimen/fab_margin"
                android:paddingRight="@dimen/horizontal_dashboard"


                android:weightSum="100">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="40"
                    android:fontFamily="@font/bariol_bold"
                    android:text="@string/title_hey"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="60"
                    android:contentDescription="@string/imageAccess"
                    android:src="@drawable/refer_icon" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/horizontal_dashboard"
                android:layout_marginTop="@dimen/normalPadding"

                android:layout_marginRight="@dimen/horizontal_dashboard"
                android:autofillHints="username"
                android:background="@drawable/container_search"
                android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm"

                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="@dimen/drawable_left"

                android:fontFamily="@font/bariol_regular"
                android:gravity="center_vertical"


                android:hint="@string/edt_search"
                android:imeOptions="actionSearch"

                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/normalPadding"
                android:paddingVertical="@dimen/top_text_card"
                android:singleLine="true"
                android:textColor="?attr/colorPrimaryDark"

                android:textColorHint="@color/color_hint"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@null">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="80dp"
                        android:background="@color/back_courses"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/horizontal_card"
                        android:layout_marginBottom="@dimen/horizontal_card"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_courses"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/horizontal_dashboard"
                            android:layout_marginTop="@dimen/normalPadding"
                            android:layout_marginRight="@dimen/horizontal_dashboard"
                            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"

                            app:spanCount="2"
                            tools:itemCount="7"
                            tools:listitem="@layout/item_card">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>